rust/tests/suite/snapshots/main__suite__pattern_snapshots__fd_search.snap
---
source: tests/pattern_snapshots.rs
expression: compressed
---
18F 5D:

src/
  main.rs lib.rs config.rs utils.rs
src/api/
  mod.rs handlers.rs middleware.rs routes.rs
src/auth/
  mod.rs jwt.rs oauth.rs
src/cache/
  mod.rs redis.rs memory.rs
src/db/
  mod.rs models.rs migrations.rs pool.rs
