rust/tests/suite/snapshots/main__suite__pattern_snapshots__find.snap
---
source: tests/pattern_snapshots.rs
expression: compressed
---
25F 6D:

src/
  main.rs lib.rs config.rs utils.rs
src/api/
  mod.rs handlers.rs middleware.rs routes.rs auth.rs
src/auth/
  mod.rs jwt.rs oauth.rs session.rs
src/cache/
  mod.rs redis.rs memory.rs policy.rs
src/core/
  mod.rs engine.rs parser.rs
src/db/
  mod.rs models.rs migrations.rs pool.rs schema.rs
