rust/tests/suite/snapshots/main__suite__pattern_snapshots__flutter_analyze.snap
---
source: tests/pattern_snapshots.rs
expression: compressed
---
Analyzing myapp...
4 issues found
