rust/tests/suite/snapshots/main__suite__pattern_snapshots__git_status.snap
---
source: tests/pattern_snapshots.rs
expression: compressed
---
main
unstaged: ~src/main.rs ~src/lib.rs
untracked: new_file.rs no changes added to commit (use "git add" and/or "git commit -a")
