rust/tests/suite/snapshots/main__suite__pattern_snapshots__go_test.snap
---
source: tests/pattern_snapshots.rs
expression: compressed
---
ok myapp/auth (0.234s)
ok myapp/db (1.456s)
ok myapp/api (0.789s)
ok myapp/cache (0.123s)
FAIL myapp/handlers (0.567s)
ok myapp/middleware (0.234s)
ok myapp/config (0.100s)
failed: TestUserCreate (0.01s)
