rust/tests/suite/snapshots/main__suite__pattern_snapshots__helm_list.snap
---
source: tests/pattern_snapshots.rs
expression: compressed
---
NAME          	NAMESPACE  	REVISION	UPDATED                                	STATUS  	CHART              	APP VERSION
cert-manager  	cert-mgr   	3       	2024-01-15 10:23:45.123456 +0000 UTC   	deployed	cert-manager-1.13.3	v1.13.3    
ingress-nginx 	ingress    	5       	2024-02-20 14:30:00.000000 +0000 UTC   	deployed	ingress-nginx-4.9.0	1.9.5      
prometheus    	monitoring 	2       	2024-03-01 09:00:00.000000 +0000 UTC   	deployed	prometheus-25.8.0  	v2.48.0    
grafana       	monitoring 	4       	2024-03-10 11:15:00.000000 +0000 UTC   	deployed	grafana-7.0.19     	10.2.3     
redis         	default    	1       	2024-03-15 08:45:00.000000 +0000 UTC   	deployed	redis-18.6.1       	7.2.4
